--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="./index.css">
+   <link rel="stylesheet" href="WEATHER/index.css">
     <title>Document</title>
 </head>
 <body>
@@ -26,6 +26,6 @@
         </section>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="WEATHER/index.js"></script>
 </body>
 </html>
